--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#120f1d" />
   <meta name="msapplication-TileColor" content="#120f1d" />
-  <meta name="theme-color" content="#120f1d" />
+  <meta name="theme-color" content="#000000" />
 
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
